# firecracker-cca

./: Cargo.toml  cca_vm_config.json  ubuntu-22.04.id_rsa  vm_config.json
.cargo/: config.toml
src/acpi-tables/: Cargo.toml
src/clippy-tracing/: Cargo.toml
src/cpu-template-helper/: Cargo.toml
src/firecracker/: Cargo.toml
src/firecracker/src/: api_server_adapter.rs
src/jailer/: Cargo.toml
src/log-instrument-macros/: Cargo.toml
src/rebase-snap/: Cargo.toml
src/seccompiler/: Cargo.toml
src/snapshot-editor/: Cargo.toml
src/utils/: Cargo.toml
src/vmm/: Cargo.toml
src/vmm/src/: builder.rs  lib.rs  persist.rs  resources.rs
src/vmm/src/arch/aarch64/: layout.rs  mod.rs  vcpu.rs  virtcca.rs
src/vmm/src/vmm_config/: cca_config.rs  mod.rs
src/vmm/src/vstate/: memory.rs  vm.rs
src/vmm/src/vstate/vcpu/: aarch64.rs  mod.rs
