[workspace]
members = ["src/*"]
# We exclude the jailer below so that it does not get build by default. This is because "cargo build" compiles
# for the gnu target, and the jailer needs a statically compiled binary to work correctly.
# See https://github.com/firecracker-microvm/firecracker/commit/3bf285c8f8a815149923c562dd7edaffcaf10c4e
# and https://github.com/firecracker-microvm/firecracker/issues/2102
default-members = ["src/clippy-tracing", "src/cpu-template-helper", "src/firecracker", "src/rebase-snap", "src/seccompiler", "src/snapshot-editor", "src/acpi-tables"]
resolver = "2"

[workspace.lints.rust]
missing_debug_implementations = "warn"

[workspace.lints.clippy]
ptr_as_ptr = "warn"
undocumented_unsafe_blocks = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_sign_loss = "warn"
exit = "warn"
tests_outside_test_module = "warn"
assertions_on_result_states = "warn"
error_impl_error = "warn"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true

[patch.crates-io]
kvm-bindings = { git = "https://git.codelinaro.org/linaro/dcap/rust-vmm/kvm-bindings.git", branch = "cca/v2" }
kvm-ioctls = { git = "https://git.codelinaro.org/linaro/dcap/rust-vmm/kvm-ioctls.git", branch = "cca/v2" }
linux-loader = { git = "https://git.codelinaro.org/linaro/dcap/rust-vmm/linux-loader.git", branch = "cca/v2" }